--- a/spotify.html
+++ b/spotify.html
@@ -26,7 +26,7 @@
   <script src="./common.js"></script>
   <script>
     if (params.get("trackId")) {
-      uri = p.get("trackId");
+      uri = params.get("trackId");
       document
         .getElementById("sp-iframe")
         .setAttribute(
